test/expressions/casts/CastCArrayToCPtr-multiple.54.good
CastCArrayToCPtr-multiple.chpl:65: error: cast of c_array to c_ptr with a different element type
